<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>no.ssb.klass</groupId>
    <artifactId>klass-root</artifactId>
    <version>4.5.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.13</version>
        <relativePath />
    </parent>

    <modules>
        <module>klass-shared</module>
        <module>klass-api</module>
        <module>klass-mail</module>
        <module>klass-index-job</module>
    </modules>

    <scm>
        <developerConnection>scm:git:https://github.com/${github.repository}.git</developerConnection>
        <url>https://github.com/${github.repository}</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <github.repository>statisticsnorway/klass</github.repository>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <sonar.organization>statisticsnorway</sonar.organization>
        <sonar.projectKey>klass</sonar.projectKey>
        <sonar.projectName>klass</sonar.projectName>

        <asciidoctor-version>3.2.0</asciidoctor-version>
        <commons-io-version>2.21.0</commons-io-version>
        <commons-lang3-version>3.20.0</commons-lang3-version>
        <guava-version>33.6.0-jre</guava-version>
        <jackson-bom.version>2.21.2</jackson-bom.version>
        <jakarta-rs-api-version>4.0.0</jakarta-rs-api-version>
        <jaxb-api-version>4.0.5</jaxb-api-version>
        <maven-jaxb2-plugin-version>2.5.0</maven-jaxb2-plugin-version>
        <objenesis-version>3.5</objenesis-version>
        <rest-assured-version>5.5.6</rest-assured-version>
        <snakeyaml.version>2.5</snakeyaml.version>
        <solr-version>8.5.2</solr-version>
        <sonar.version>5.6.0.6792</sonar.version>
        <spring.version>4.3.7.RELEASE</spring.version>
        <spring-data-opensearch-starter.version>1.8.2</spring-data-opensearch-starter.version>
        <spring-restdocs-version>3.0.5</spring-restdocs-version>
        <postgresql.version>42.7.10</postgresql.version>
        <testcontainers.version>1.20.1</testcontainers.version>
        <tomcat7-maven-plugin-version>2.2</tomcat7-maven-plugin-version>
        <woodstox-version>4.4.1</woodstox-version>
        <zonky.pg.version>2.8.0</zonky.pg.version>
        <zonky.version>2.2.2</zonky.version>
    </properties>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/${github.repository}</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </distributionManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <release>${java.version}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar.version}</version>
                </plugin>
                <plugin>
                    <groupId>com.spotify.fmt</groupId>
                    <artifactId>fmt-maven-plugin</artifactId>
                    <version>2.29</version>
                    <configuration>
                        <!-- Use this for better backwards compatibility -->
                        <style>aosp</style>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <releaseProfiles>documentation</releaseProfiles>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <tagNameFormat>v@{project.version}</tagNameFormat>
                        <arguments>
                            -Pdocumentation -Dmaven.javadoc.skip=true -pl :klass-api -am
                        </arguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
